--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -34,10 +34,10 @@ endif()
 # Add test executables
 set(TEST_CPPLIB_LIST
     TestDeque.cpp
-    TestList.cpp
-    TestQueue.cpp
-    TestStack.cpp
-    TestVector.cpp
+    # TestList.cpp
+    # TestQueue.cpp
+    # TestStack.cpp
+    # TestVector.cpp
     # TestBinaryHeap.cpp
     # TestIndexHeap.cpp
     # TestPriorityQueue.cpp
